tests/ui/issues/issue-24013.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-24013.rs:5:13
   |
LL |     unsafe {swap::<&mut _>(transmute(&a), transmute(&b))};
   |             ^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `swap`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
